@@ -3,7 +3,8 @@ local body = piece 'body'
 local turbine = piece 'turbine'
 
 function script.Create()
-	Spring.UnitScript.Spin( turbine, x_axis, math.rad(360) )
+	Spring.UnitScript.Spin( turbine, x_axis, math.rad(1440) )
+	Spring.UnitScript.Spin( turbine, y_axis, math.rad(18) )
     return 0
 end
 
