@@ -34,7 +34,7 @@ local names			= {
 for i=1,#names do
 	local unitDefName 	= names[i]
 	local scriptName	= "template.lua"
-	if (unitDefName == "base_turbine") then scriptName = "base/turbine.lua" end
+	if (unitDefName == "base_turbine" or unitDefName == "base_turbine45") then scriptName = "base/turbine.lua" end
 	local unitDef = {
 	--Internal settings
 		BuildPic 		= "filename.bmp",
